--- a/styles/style.css
+++ b/styles/style.css
@@ -63,3 +63,16 @@ padding: 17px 34px 17px 34px;
 }
 
 /* banner end */
+
+/* fast section start */
+.pillars{
+  margin: 30px 150px;
+}
+
+.pillars-title{
+
+  font-size: 40px;
+  font-weight: 700;
+  
+}
+
