--- a/styles/style.css
+++ b/styles/style.css
@@ -61,6 +61,7 @@ font-weight: 700;
   font-size: 18px;
 font-weight: 600;
 color: rgb(255, 255, 255);
+border: none;
 border-radius: 8px;
 background: rgb(0, 106, 80);
 padding: 17px 34px 17px 34px;
@@ -109,3 +110,103 @@ color: rgba(14, 14, 14, 0.7);
 
 /* fast section end */
 
+
+/* second section start */
+
+.vision-section{
+  margin: 30px 150px;
+}
+
+.vision-title{
+  font-size: 40px;
+font-weight: 700;
+}
+
+.vision-pera{
+  font-size: 16px;
+font-weight: 400;
+color: rgba(14, 14, 14, 0.7);
+}
+
+.pack-container{
+  display: flex;
+  justify-content: space-between;
+}
+
+.pack{
+  width: 410px;
+  box-sizing: border-box;
+border-radius: 16px;
+padding: 32px;
+background: rgba(84, 144, 245, 0.2);
+  margin: 20px 24px;
+}
+
+.pack-title{
+  font-size: 20px;
+font-weight: 700;
+color: rgba(14, 14, 14, 0.8);
+}
+
+.pack-pera{
+  font-size: 16px;
+font-weight: 400;
+color: rgba(14, 14, 14, 0.7);
+}
+
+.pack-btn{
+  font-size: 16px;
+font-weight: 600;
+border: none;
+color: rgb(255, 255, 255);
+border-radius: 8px;
+background: rgb(84, 144, 245);
+padding: 11px 20px 11px 20px;
+
+}
+
+
+.pack-1{
+  width: 410px;
+  box-sizing: border-box;
+border-radius: 16px;
+padding: 32px;
+background: rgb(198, 228, 214);
+  margin: 20px 24px;
+}
+
+
+.pack-btn-1{
+  font-size: 16px;
+font-weight: 600;
+border: none;
+color: rgb(255, 255, 255);
+border-radius: 8px;
+background: rgb(9, 161, 92);
+padding: 11px 20px 11px 20px;
+
+}
+
+
+.pack-2{
+  width: 410px;
+  box-sizing: border-box;
+border-radius: 16px;
+padding: 32px;
+background: rgb(247, 235, 207);
+  margin: 20px 24px;
+}
+
+
+.pack-btn-2{
+  font-size: 16px;
+font-weight: 600;
+border: none;
+color: rgb(255, 255, 255);
+border-radius: 8px;
+background: rgb(255, 194, 57);
+padding: 11px 20px 11px 20px;
+
+}
+
+/* second section end */
