--- a/styles/style.css
+++ b/styles/style.css
@@ -210,3 +210,38 @@ padding: 11px 20px 11px 20px;
 }
 
 /* second section end */
+
+/* yunus section start */
+
+
+.yunus{
+  margin: 30px 150px;
+  box-sizing: border-box;
+border: 1px solid rgba(14, 14, 14, 0.15);
+border-radius: 16px;
+background: rgb(255, 255, 255);
+padding: 48px 24px 48px 24px;
+background-image: url(../assets/quote-bg.png);
+background-repeat: no-repeat;
+
+}
+
+.yunus-p{
+  font-size: 16px;
+font-weight: 400;
+color: rgba(14, 14, 14, 0.8);
+}
+
+.yunus-h{
+  font-size: 20px;
+font-weight: 600;
+color: rgba(14, 14, 14, 0.8);
+}
+
+.yunus-c{
+  font-size: 16px;
+font-weight: 400;
+color: rgba(14, 14, 14, 0.6);
+}
+
+/* yunus section end */
