--- a/styles/style.css
+++ b/styles/style.css
@@ -245,3 +245,60 @@ color: rgba(14, 14, 14, 0.6);
 }
 
 /* yunus section end */
+
+/* resent news start */
+
+.resent-news{
+  margin: 30px 150px;
+ 
+}
+
+.resent-title{
+  font-size: 40px;
+  font-weight: 700;
+}
+
+.resent-p{
+  font-size: 16px;
+font-weight: 400;
+color: rgba(14, 14, 14, 0.7);
+
+}
+
+.resent-cards{
+  margin-top: 30px;
+  border-radius: 24px;
+  background: rgb(255, 255, 255);
+  padding: 48px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.pic{
+  border-radius: 24px;
+  margin: 0px 32px;
+}
+
+.cards-r-title{
+  font-size: 32px;
+font-weight: 700;
+color: rgba(14, 14, 14, 0.8);
+}
+
+.cards-r-p-1{
+  font-size: 16px;
+font-weight: 400;
+color: rgba(14, 14, 14, 0.7);
+}
+
+.cards-r-btn{
+  font-size: 18px;
+font-weight: 600;
+color: rgb(255, 255, 255);
+border-radius: 8px;
+background: rgb(0, 106, 80);
+padding: 13px 26px 13px 26px;
+border: none;
+
+}
